--- a/data/css/media.css
+++ b/data/css/media.css
@@ -113,11 +113,12 @@
     height: 20px;
   }
   .partners-main {
-    width: calc(70% - 25px);
+    width: 100%;
     margin-left: 25px;
   }
   .category-list {
     width: 30%;
+    display: none;
   }
   .category-list li a {
     font-size: .7em;
