--- a/data/css/media.scss
+++ b/data/css/media.scss
@@ -110,11 +110,12 @@
         height: 20px;
     }
     .partners-main{
-        width: calc(70% - 25px);
+        width: 100%;
         margin-left: 25px;
     }
     .category-list{
         width: 30%;
+        display: none;
         li{
             a{
                 font-size: .7em;
