--- a/data/css/style.css
+++ b/data/css/style.css
@@ -1414,7 +1414,6 @@ h4.section-title::before {
 }
 
 .input-group input:focus:invalid + label::after {
-  content: "Please fill out this form";
   color: #e20001;
   position: fixed;
   width: -webkit-max-content;
@@ -1630,6 +1629,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 @media only screen and (max-width: 992px) {
+  #searchResults {
+    position: relative;
+  }
   .menu {
     display: none;
   }
@@ -1733,6 +1735,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-right: 25px;
   }
   .category-list {
+    display: none;
     width: 30%;
   }
   .category-list li img {
@@ -1744,7 +1747,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: .7em;
   }
   .partners-main {
-    width: calc(70% - 25px);
+    width: 100%;
     margin-left: 25px;
   }
   #listOfPartners ul li {
